update ffmpeg && ffserver Encoder

--- a/data/ffserver.conf
+++ b/data/ffserver.conf
@@ -93,7 +93,7 @@ RTSPBindAddress 0.0.0.0
 <Stream live1.mpeg>
    Format rtp
    Feed feed1.ffm
-   VideoCodec libxvid
+   VideoCodec mpeg4
    VideoFrameRate 50
    VideoBitRate 128
    VideoBufferSize 100
